--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "yiisoft/yii2-bootstrap4": "@dev",
         "kartik-v/yii2-widget-select2": "dev-master",
         "smalot/pdfparser": "^2.2",
-        "gufy/pdftohtml-php": "~2"
+        "gufy/pdftohtml-php": "~2",
+        "kop/yii2-scroll-pager": "dev-master"
 
     },
     "require-dev": {
