--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "2amigos/yii2-chartjs-widget": "~2.0",
         "lavrentiev/yii2-toastr": "dev-master",
         "kartik-v/yii2-date-range": "dev-master",
-        "practically/yii2-chartjs": "^1.1"
+        "practically/yii2-chartjs": "^1.1",
+        "kartik-v/yii2-export": "dev-master",
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
 
     },
     "require-dev": {
