--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "kartik-v/yii2-date-range": "dev-master",
         "practically/yii2-chartjs": "^1.1",
         "kartik-v/yii2-export": "dev-master",
-        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev",
+        "workerman/workerman": "^4.1"
 
     },
     "require-dev": {
