--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,13 @@
 <IfModule mod_rewrite.c>
     Options +FollowSymlinks
     RewriteEngine On
+
+    AddType audio/mpeg mp3
+        AddType audio/mp4 m4a
+        AddType audio/ogg ogg
+        AddType audio/ogg oga
+        AddType audio/webm webma
+        AddType audio/wav wav
 </IfModule>
 
 <IfModule mod_rewrite.c>
