--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -3,3 +3,10 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # В противном случае перенаправляем на index.php
 RewriteRule . index.php
+
+AddType audio/mpeg mp3
+AddType audio/mp4 m4a
+AddType audio/ogg ogg
+AddType audio/ogg oga
+AddType audio/webm webma
+AddType audio/wav wav
