--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
         "kartik-v/yii2-export": "dev-master",
         "kartik-v/yii2-bootstrap4-dropdown": "@dev",
         "workerman/workerman": "^4.1",
-        "xj/yii2-jplayer-widget": "*"
-
+        "xj/yii2-jplayer-widget": "*",
+        "2amigos/yii2-ckeditor-widget" : "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
